@@ -4,7 +4,7 @@
 package Scrappy;
 
 BEGIN {
-    $Scrappy::VERSION = '0.94111260';
+    $Scrappy::VERSION = '0.94111280';
 }
 
 # load OO System
@@ -66,7 +66,7 @@ Scrappy - The All Powerful Web Spidering, Scraping, Creeping Crawling Framework
 
 =head1 VERSION
 
-version 0.94111260
+version 0.94111280
 
 =head1 SYNOPSIS
 
@@ -658,7 +658,7 @@ L<Scrappy::Scraper::Parser> object which contains the matching elements.
     ->select('div div')->data;
     
     # The code above selects the div > div inside of the 5th tr in #container table
-    # Access tag html, text and other attributes as follows...
+    # Access attributes html, text and other attributes as follows...
     
     $element = $scraper->select('table')->data->[0];
     $element->{html}; # HTML representation of the table
