@@ -1,6 +1,6 @@
 package Scrappy::Action;
 BEGIN {
-  $Scrappy::Action::VERSION = '0.94111260';
+  $Scrappy::Action::VERSION = '0.94111280';
 }
 
 use Moose;
