@@ -1,6 +1,6 @@
 package Scrappy::Action::Generate;
 BEGIN {
-  $Scrappy::Action::Generate::VERSION = '0.94111260';
+  $Scrappy::Action::Generate::VERSION = '0.94111280';
 }
 
 use File::Util;
