@@ -1,6 +1,6 @@
 package Scrappy::Plugin::RandomProxy;
 BEGIN {
-  $Scrappy::Plugin::RandomProxy::VERSION = '0.94111260';
+  $Scrappy::Plugin::RandomProxy::VERSION = '0.94111280';
 }
 
 use Moose::Role;
