@@ -1,6 +1,6 @@
 package Scrappy::Project::Document;
 BEGIN {
-  $Scrappy::Project::Document::VERSION = '0.94111260';
+  $Scrappy::Project::Document::VERSION = '0.94111280';
 }
 
 use Moose::Role;
