@@ -3,7 +3,7 @@
 
 package Scrappy::Session;
 BEGIN {
-  $Scrappy::Session::VERSION = '0.94111260';
+  $Scrappy::Session::VERSION = '0.94111280';
 }
 
 # load OO System
@@ -102,7 +102,7 @@ Scrappy::Session - Scrappy Scraper Session Handling
 
 =head1 VERSION
 
-version 0.94111260
+version 0.94111280
 
 =head1 SYNOPSIS
 
