@@ -1,3 +1,6 @@
+Sun May  8 07:50:07 UTC 2011	New version Scrappy-0.94111280
+				Fixed a major bug in the download action
+				Added first, last and each methods to parser
 Fri May  6 01:10:37 UTC 2011	New version Scrappy-0.94111260
 				Changed project creation script in Scrappy::Action::Generate
 				Added native Data::Dumper::Dumper() support via the dumper() method
